vemo-app/main/default/objects/ContractTerm__c/ContractTerm__c.object-meta.xml
<CustomObject>
    <label>Contract Term</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Contract Terms Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>