vemo-app/main/default/objects/ContractTerm__c/fields/AdjustmentMethod__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentMethod__c</fullName>
    <label>Adjustment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContractTermsAdjustmentMethod</valueSetName>
    </valueSet>
</CustomField>