vemo-app/main/default/objects/ContractTerm__c/fields/EarningsGroup__c.field-meta.xml
<CustomField>
    <fullName>EarningsGroup__c</fullName>
    <label>Earnings Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EarningsGroup</valueSetName>
    </valueSet>
</CustomField>