vemo-app/main/default/objects/ContractTerm__c/fields/GradeLevel__c.field-meta.xml
<CustomField>
    <fullName>GradeLevel__c</fullName>
    <label>Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>