vemo-app/main/default/objects/ContractTerm__c/fields/IncomeShare__c.field-meta.xml
<CustomField>
    <fullName>IncomeShare__c</fullName>
    <label>Income Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>