vemo-app/main/default/objects/ContractTerm__c/fields/MaximumFundingAmount__c.field-meta.xml
<CustomField>
    <fullName>MaximumFundingAmount__c</fullName>
    <label>Maximum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>