vemo-app/main/default/objects/ContractTerm__c/fields/MinimumFundingAmount__c.field-meta.xml
<CustomField>
    <fullName>MinimumFundingAmount__c</fullName>
    <label>Minimum Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>