vemo-app/main/default/objects/ContractTerm__c/fields/PaymentCapFactor__c.field-meta.xml
<CustomField>
    <fullName>PaymentCapFactor__c</fullName>
    <label>Payment Cap Factor</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>