vemo-app/main/default/objects/ContractTerm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>EarningsGroup__c</columns>
    <columns>GradeLevel__c</columns>
    <columns>IncomeShare__c</columns>
    <columns>MinimumFundingAmount__c</columns>
    <columns>MaximumFundingAmount__c</columns>
    <columns>PaymentTerm__c</columns>
    <columns>AdjustmentMethod__c</columns>
    <columns>PaymentCapFactor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>